--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,2 +1,2 @@
-REACT_APP_API_DOMAIN=https://assignment-tracker-backend.charlottewest10.now.sh
+REACT_APP_API_DOMAIN=https://<name>.<username>.now.sh
 REACT_APP_NODE_ENV=production
